clusters/onprem1/config/homer/homer-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-mtls"
  namespace: homer
spec:
  mtls:
    mode: STRICT
