clusters/onprem1/config/homer/homer-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homer
  namespace: homer
spec:
  hosts:
  - "home.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: homer
        port:
          number: 8080
